# libinput

./: CMakeLists.txt  build.sh  conanfile.txt
src/: export.h  utils.c  utils.h
src/clipboard/: clipboard.c  clipboard.h
src/input/: keyboard.c  keyboard.h  listener.c  listener.h  mouse.c  mouse.h
